# csgy6953-fp1

./: .gitignore  README.md  pyproject.toml  requirements.txt
dlfp/: __main__.py  common.py  datasets.py  demo_deen.py  easymake.py  main.py  models.py  results.py  running.py  tokens.py  train.py  translate.py  utils.py
dlfp/baseline/: cs.py
dlfp/nb/: figures.ipynb
dlfp_tests/: test_common.py  test_datasets.py  test_easymake.py  test_main.py  test_models.py  test_results.py  test_running.py  test_tokens.py  test_train.py  test_translate.py  test_utils.py  tools.py
dlfp_tests/baseline/: test_cs.py
dlfp_tests/testdata/: cs-test-1.json  translate-expected-1.csv
dlfp_tests/testdata/0512-om4/: 23-0-20240512-1659-info.json  23-1-20240512-1659-attempts-checkpoint-epoch009_valid_r98765_s1000_20240512-224424.csv  23-1-20240512-1659-attempts-checkpoint-epoch009_valid_r98765_s1000_20240512-224424.csv.args.txt  23-2-20240512-1659-attempts-checkpoint-epoch009_valid_r98765_s1000_20240512-224436.csv  23-2-20240512-1659-attempts-checkpoint-epoch009_valid_r98765_s1000_20240512-224436.csv.args.txt  23-3-20240512-1659-attempts-checkpoint-epoch009_valid_r98765_s1000_20240512-224517.csv.args.txt  23-4-20240512-1659-attempts-checkpoint-epoch009_valid_r98765_s1000_20240512-1947.csv.args.txt  23-5-20240512-1659-attempts-checkpoint-epoch009_valid_r98765_s1000_20240512-224503.csv  (+7 more)
examples/: demo07_transformers.ipynb
report/: .gitignore  Formatting-Instructions-LaTeX-2024.tex  aaai24.bib  aaai24.sty  dlatextopdf.sh  dlfp-report.tex  latextopdf.sh
